# viz-wizard

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  credentials.toml  secrets.toml
azure/: azure-pipelines.yml
infra/: azure-pipelines.yml  main.bicep  test.py
infra/modules/: app.bicep  containerRegistry.bicep  firewall.bicep  keyvault.bicep  managedIdentity.bicep  sqlServer.bicep
src/: exceptions.py
src/interface/: homepage.py
src/load/: file_loader.py
src/logger/: event_logging.py  schema.py
src/logger/queries/: events.py
src/template/: homepage.py
src/utils/: get_colors.py  get_data.py  get_secrets.py
src/validate/: data_validation.py
src/visualize/: charts.py
