[tool.poetry]
name = "vizwizard"
version = "0.1.0"
description = ""
authors = ["Casper Damen"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
plotly = "^5.6.0"
openpyxl = "^3.0.9"
altair = "^4.2.0"
streamlit = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
